# tflite-sys

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
docs/: 3RD-PARTY-LICENSES.md
src/: lib.rs
